api: add internal transfer sms matching hints
